--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "author": "Matt Walters <mattwalters5@gmail.com>",
-  "contributors": 
-   [ "mattwalters5@gmail.com", "timisbusy@gmail.com" ],
+  "contributors": [
+    "mattwalters5@gmail.com",
+    "timisbusy@gmail.com"
+  ],
   "name": "servicebus",
   "description": "Simple service bus for sending events between processes using amqp.",
   "version": "0.1.0",
@@ -15,11 +17,13 @@
   },
   "dependencies": {
     "amqp": "0.1.3",
-    "node-uuid": "1.3.3"
+    "node-uuid": "1.3.3",
+    "debug": "~0.7.2"
   },
   "devDependencies": {
-      "mocha": ">=1.2.1",
-      "should": "0.6.3"
+    "longjohn": "~0.2.0",
+    "mocha": ">=1.2.1",
+    "should": "0.6.3"
   },
   "optionalDependencies": {}
 }
