--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "url": "git://github.com/mateodelnorte/servicebus.git"
   },
   "engines": {
-    "node": "<0.10.15"
+    "node": "0.6 || 0.8 || 0.9 || 0.10"
   },
   "dependencies": {
     "amqp": "0.1.3",
