--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "devDependencies": {
     "longjohn": "~0.2.0",
     "mocha": ">=1.2.1",
-    "should": "0.6.3"
+    "should": "0.6.3",
+    "sinon": "~1.7.3"
   },
   "optionalDependencies": {}
 }
