--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   ],
   "name": "servicebus",
   "description": "Simple service bus for sending events between processes using amqp.",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "homepage": "https://github.com/mateodelnorte/servicebus",
   "repository": {
     "type": "git",
@@ -17,11 +17,11 @@
     "node": "0.6 || 0.8 || 0.9 || 0.10"
   },
   "dependencies": {
-    "amqp": "0.1.8",
-    "bluebird": "~1.0.0",
-    "debug": "~0.7.2",
+    "amqp": "^0.1.8",
+    "bluebird": "^1.0.8",
+    "debug": "^0.7.4",
     "extend": "^1.2.1",
-    "node-uuid": "1.4.0"
+    "node-uuid": "^1.4.0"
   },
   "devDependencies": {
     "longjohn": "~0.2.0",
