--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "author": "Matt Walters <mattwalters5@gmail.com>",
+  "author": "Thibault Laurens <laurens.thibault@gmail.com>",
   "contributors": [
-    "mattwalters5@gmail.com",
-    "timisbusy@gmail.com",
-    "mail@chrisabrams.com"
+      "mattwalters5@gmail.com",
+      "timisbusy@gmail.com",
+      "mail@chrisabrams.com",
+      "laurens.thibault@gmail.com"
   ],
-  "name": "servicebus",
+  "name": "hera-servicebus",
   "description": "Simple service bus for sending events between processes using amqp.",
   "version": "0.4.7",
-  "homepage": "https://github.com/mateodelnorte/servicebus",
+  "homepage": "https://github.com/ThibaultLaurens/servicebus",
   "repository": {
     "type": "git",
-    "url": "git://github.com/mateodelnorte/servicebus.git"
+    "url": "git://github.com/ThibaultLaurens/servicebus.git"
   },
   "engines": {
     "node": "0.6 || 0.8 || 0.9 || 0.10"
