--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "node": "0.6 || 0.8 || 0.9 || 0.10"
   },
   "dependencies": {
-    "amqp": "^0.1.8",
+    "amqplib": "^0.2.0",
     "bluebird": "^1.0.8",
     "debug": "^0.7.4",
     "extend": "^1.2.1",
