--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   ],
   "name": "servicebus",
   "description": "Simple service bus for sending events between processes using amqp.",
-  "version": "0.4.7",
+  "version": "1.0.0-rc1",
   "homepage": "https://github.com/mateodelnorte/servicebus",
   "repository": {
     "type": "git",
