--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,12 @@ cache:
 
 notifications:
   email: false
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/f2153139b5c691e5a554
+    on_success: change  # options: [always|never|change] default: always
+    on_failure: always  # options: [always|never|change] default: always
+    on_start: never     # options: [always|never|change] default: always
 
 node_js:
   - '8'
