--- a/.travis.yml
+++ b/.travis.yml
@@ -30,10 +30,10 @@ before_install:
   # Docker.
   - sudo apt-get update
 
-  # Now we can install the newer docker-engine which is required for the newer
+  # Now we can install the newer docker-ce which is required for the newer
   # docker-composer we will install next. The messy options are to force it to
   # be non-interactive (normally it asks you a bunch of config questions).
-  - sudo apt-get install -o Dpkg::Options::="--force-confold" --force-yes -y docker-engine
+  - sudo apt-get install -o Dpkg::Options::="--force-confold" --force-yes -y docker-ce
 
   # As of the writing of this script Travis has docker-compose v1.4.2, we need
   # to update it to 1.8+. $DOCKER_COMPOSE_VERSION is provide from the `env`
