see if running as root will fix EACCESS prob on travis docker

--- a/docker-compose.tests.yml
+++ b/docker-compose.tests.yml
@@ -10,7 +10,7 @@ services:
     volumes:
       - .:/usr/src/
     working_dir: /usr/src/
-    user: node
+    user: root
     environment:
       RABBITMQ_URL: amqp://rabbitmq:5672
     networks:
