--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "commit": "git-cz",
     "test": "NODE_ENV=test jest --config jest.json --coverage --verbose",
     "test:watch": "NODE_ENV=test jest --config jest.json --watch --coverage --verbose",
-    "test:staging": "mocha -R spec --recursive",
+    "test:staging": "mocha -R spec --recursive --exit",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "homepage": "https://github.com/mateodelnorte/servicebus",
@@ -25,11 +25,11 @@
     "node": "0.6 || 0.8 || 0.9 || 0.10 || 0.12"
   },
   "dependencies": {
-    "amqplib": "^0.4.0",
+    "amqplib": "^0.5.2",
     "debug": "^2.2.0",
     "extend": "^3.0.0",
     "node-uuid": "^1.4.3",
-    "readable-id": "0.0.3"
+    "readable-id-mjs": "^1.0.0"
   },
   "devDependencies": {
     "commitizen": "^2.9.6",
@@ -38,7 +38,7 @@
     "longjohn": "~0.2.9",
     "mocha": ">=2.3.3",
     "semantic-release": "^11.0.2",
-    "servicebus-retry": "0.0.9",
+    "servicebus-retry": "0.0.12",
     "should": "7.1.0",
     "sinon": "~1.17.1"
   },
