fix: semantic-release

--- a/.travis.yml
+++ b/.travis.yml
@@ -53,7 +53,10 @@ before_install:
   # whatever reason it's best to report that now before your tests start
   # otherwise it can be really tricky to debug why tests are failing sometimes.
   - docker ps
+  - npm i -g npm@latest
 
+install:
+  - npm install
 
 before_script:
   # - npm run lint
