--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "commit": "git-cz",
     "test": "NODE_ENV=test jest --config jest.json --coverage --verbose",
     "test:watch": "NODE_ENV=test jest --config jest.json --watch --coverage --verbose",
-    "test:staging": "mocha -R spec --recursive --exit",
-    "semantic-release": "semantic-release",
-    "travis-deploy-once": "travis-deploy-once"
+    "test:staging": "mocha -R spec --recursive --exit"
   },
   "homepage": "https://github.com/mateodelnorte/servicebus",
   "repository": {
@@ -38,11 +36,9 @@
     "jest": "^23.6.0",
     "longjohn": "~0.2.9",
     "mocha": ">=2.3.3",
-    "semantic-release": "^15.12.3",
     "servicebus-retry": "0.0.13",
     "should": "13.2.3",
-    "sinon": "~7.1.1",
-    "travis-deploy-once": "^5.0.9"
+    "sinon": "~7.1.1"
   },
   "optionalDependencies": {},
   "config": {
